# painter

./: CMakeLists.txt
src/: main.cpp  render.cpp  render.h  term.cpp  term.h
src/core/: point.cpp  point.h  rgb.cpp  rgb.h  tps_controller.cpp  tps_controller.h
src/render/: cell.cpp  cell.h  pixel.cpp  pixel.h  render.cpp  render.h  term.cpp  term.h
